# friendly_uploader

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: auth.rs  commands.rs  configfile.rs  lib.rs  main.rs
src/api/: drive.rs  driveitem.rs  mod.rs  onedrive.rs  onedriveapi.rs  user.rs
src/test_data/config_files/: complete_config_file.yml  incomplete_config_file.yml
tests/: app.rs
