[package]
name = "friendly_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
simple-error = "0.2.3"
url = "2.2.2"
urlencoding = "2.1.0"
serde_yaml = "0.8.24"
serde = {version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"