[package]
name = "onedrive_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
simple-error = "0.2"
url = "2.2"
urlencoding = "2.1"
serde_yaml = "0.8"
serde = {version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.19", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
open = "3.0"
onedrive-api = "0.8"
dirs = "4.0.0"
serde_json = "1.0.81"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3.3.0"